executable('phosphor-u-boot-env-mgr',
        'u-boot-env-mgr.cpp',
        'mainapp.cpp',
        dependencies: default_deps,
        install: true,
)
	
executable('dt-vpd-parsed',
	'machinecontext.cpp',
	'dt-vpd-parsed.cpp',
        dependencies: default_deps,
        install: true,
)
